--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/vercel-builder": "^0.24.0",
     "core-js": "^3.25.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
